# fullstack_travel_agent_crewai_nextjs_react

./: README.md  pyproject.toml
src/travel_agent_crewai/: api.py  crew.py  main.py
src/travel_agent_crewai/config/: agents.yaml  tasks.yaml
travel_agent_crewai/: pyproject.toml
travel_agent_crewai/src/travel_agent_crewai/: api.py  crew.py  main.py
travel_agent_crewai/src/travel_agent_crewai/config/: agents.yaml  tasks.yaml
