[project]
name = "travel_agent_crewai"
version = "0.1.0"
description = "travel-agent-crewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13.2"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
travel_agent_crewai = "travel_agent_crewai.main:run"
run_crew = "travel_agent_crewai.main:run"
train = "travel_agent_crewai.main:train"
replay = "travel_agent_crewai.main:replay"
test = "travel_agent_crewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
